--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI/UX Oblikovalec</title>
+    <title>Izdelava spletnih strani Pintar</title>
     <link rel="stylesheet" href="slog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +63,7 @@
         <div class="headertext">
 
             <h2>UI/UX Designer</h2>
-            <h1>Živjo, sem <span>Jure Pintar</span><br>Razvijalec spletnih strani</h1>
+            <h1>Živjo, sem <span>Jure Pintar</span><br>Oblikovalec spletnih strani</h1>
 
             <a href="#omeni" class="krog">
                 <div class="arrow-down"></div>
@@ -87,7 +87,7 @@
             <h1>O meni</h1>
             <p>Pozdravljeni! Sem <span>Jure Pintar</span>, 16 letni ustvarjalec unikatnih spletnih strani. Obiskujem srednjo tehnično šolo v Kranju, smer tehnik računalništva. Nad izdelavo spletnih strani sem se navdušil v 8 razredu, kot samouk sem se s pomočjo Youtuba in z ostalimi spletnimi orodji učil <span>HTML</span>, <span>CSS</span> in programski jezik <span>JavaScript</span>. Svoje znanje sem od takrat nenehno izpolnjeval, rezultat tega so tri pravljične spletne strani.</p>
             <p>Nenehno se učim in dopolnjujem znanje, da lahko svojim strankam ponudim najboljšo možno kvaliteto. Če potrebujete spletno stran, ki bo odražala vaše edinstvene ideje in podjetniški duh, sem tu, da vam pomagam. Skupaj lahko ustvarimo spletno stran, ki bo navdušila vaše obiskovalce in povečala vašo digitalno sled. Z veseljem se lotim novih izzivov in sodelujem pri projektih, ki zahtevajo inovativnost, natančnost in zanesljivost. Ne glede na to, ali gre za <span>osebno spletno stran</span>, <span>portfelj</span> ali <span>poslovno spletno stran</span>, sem pripravljen narediti korak naprej in vam pomagati doseči vaše cilje.</p>
-            <p>Vaša spletna stran je <span>odraz vaše identitete in vrednot</span>. Ker je pomembno, da zaupate svojo vizijo nekomu, ki bo skrbno in ustvarjalno predstavil vaše ideje, sem tukaj, da vam pomagam.</p>
+            <p>Vaša <span>spletna stran je odraz vaše identitete in vrednot</span>. Ker je pomembno, da zaupate svojo vizijo nekomu, ki bo skrbno in ustvarjalno predstavil vaše ideje, sem tukaj, da vam pomagam.</p>
             
             <div class="omenisez">
                 <a href="#sez1" data-target="#sez1">Znanja</a>
@@ -290,7 +290,7 @@
 
                     </div>
 
-                    <a href="" download class="gumb">Prenesi CV</a>
+                    <a href="CV-Jure Pintar.docx" download class="gumb">Prenesi CV</a>
 
                 </div>
 
