--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="omenitext">
 
             <h1>O meni</h1>
-            <p>Pozdravljeni! Sem <span>Jure Pintar</span>, 16 letni ustvarjalec unikatnih spletnih strani. Obiskujem srednjo tehnično šolo v Kranju, smer tehnik računalništva. Nad izdelavo spletnih strani sem se navdušil v 8 razredu, kot samouk sem se s pomočjo Youtuba in z ostalimi spletnimi orodji učil <span>HTML</span>, <span>CSS</span> in programski jezik <span>JavaScript</span>. Svoje znanje sem od takrat nenehno izpolnjeval, rezultat tega so tri pravljične spletne strani.</p>
+            <p>Pozdravljeni! Sem <span>Jure Pintar</span>, 17 letni ustvarjalec unikatnih spletnih strani. Obiskujem srednjo tehnično šolo v Kranju, smer tehnik računalništva. Nad izdelavo spletnih strani sem se navdušil v 8 razredu, kot samouk sem se s pomočjo Youtuba in z ostalimi spletnimi orodji učil <span>HTML</span>, <span>CSS</span> in programski jezik <span>JavaScript</span>. Svoje znanje sem od takrat nenehno izpolnjeval, rezultat tega so tri pravljične spletne strani.</p>
             <p>Nenehno se učim in dopolnjujem znanje, da lahko svojim strankam ponudim najboljšo možno kvaliteto. Če potrebujete spletno stran, ki bo odražala vaše edinstvene ideje in podjetniški duh, sem tu, da vam pomagam. Skupaj lahko ustvarimo spletno stran, ki bo navdušila vaše obiskovalce in povečala vašo digitalno sled. Z veseljem se lotim novih izzivov in sodelujem pri projektih, ki zahtevajo inovativnost, natančnost in zanesljivost. Ne glede na to, ali gre za <span>osebno spletno stran</span>, <span>portfelj</span> ali <span>poslovno spletno stran</span>, sem pripravljen narediti korak naprej in vam pomagati doseči vaše cilje.</p>
             <p>Vaša <span>spletna stran je odraz vaše identitete in vrednot</span>. Ker je pomembno, da zaupate svojo vizijo nekomu, ki bo skrbno in ustvarjalno predstavil vaše ideje, sem tukaj, da vam pomagam.</p>
             
@@ -175,24 +175,24 @@
 
             <div class="storitvevsebina">
                 <i class="fa-solid fa-code"></i>
-                <h2>Oblikovanje spletnih strani</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                <h2>Izdelava spletnih strani</h2>
+                <p>Izdelava spletnih strani vključuje tehnični proces, ki obsega programiranje, oblikovanje in postavitev vsebine za ustvarjanje funkcionalne in privlačne spletne strani. To vključuje uporabo programskih jezikov, kot so HTML, CSS in JavaScript.</p>
                 <a href="#">Več o tem</a>
 
             </div>
 
             <div class="storitvevsebina">
                 <i class="fa-brands fa-app-store"></i>
-                <h2>Oblikovanje aplikacij</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                <h2>Prilagajanje napravam</h2>
+                <p>Prilagajanje napravam, znano tudi kot odzivno oblikovanje, je proces ustvarjanja spletnih strani, ki se prilagajajo različnim napravam, kot so mobilni telefoni, tablice in računalniki. Cilj je, da spletno mesto deluje enako dobro na vseh napravah.</p>
                 <a href="#">Več o tem</a>
 
             </div>
 
             <div class="storitvevsebina">
                 <i class="fa-solid fa-crop-simple"></i>
-                <h2>UI/UX oblikovanje</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                <h2>Upravljanje spletne strani</h2>
+                <p>Upravljanje spletne strani je reden postopek, ki zajema pregledovanje, urejanje in dodajanje vsebine ter funkcionalnosti na spletno mesto, da ostane aktualno, varno in učinkovito. To vključuje tudi izboljšave oblikovanja in varnostne posodobitve.</p>
                 <a href="#">Več o tem</a>
 
             </div>
@@ -221,7 +221,7 @@
                     <div class="projektivsebinatext">
 
                         <h2>Miklavževa hiša</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                        <p>Nekateri ljudje sami po sebi izžarevajo toplino, tako jo tudi nekateri objekti. Brez šminke; s tistim, kar nosijo v sebi. Ob zahodnem robu Dražgoš stoji Miklavževa hiša. Navzven preprosta, skromna, a ko vstopiš vanjo te objame toplina, ki spominja na materino naročje. Toplota, domač vonj, tišina. V trenutku se stopiš z njo in si zaželiš, da ta blaženi občutek nikoli ne mine.</p>
                         <a href="https://www.miklavzevahisa.si"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
@@ -235,7 +235,11 @@
                     <div class="projektivsebinatext">
 
                         <h2>Lesni center Gojzd</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                        <p>LCG je mlado podjetje, ki se ukvarja z izdelavo izdelkov iz masivnega lesa.
+
+                            Ponujamo vam kakovostne izdelke iz lesa za dom, vrt in vrtičkarje.
+                            
+                            Možna je tudi dostava na dom.</p>
                         <a href="https://pintarbusiness.github.io/lgc/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
@@ -249,7 +253,7 @@
                     <div class="projektivsebinatext">
 
                         <h2>Osebna spletna stran</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores unde, itaque iusto vitae ut odit sapiente, veniam vero quisquam libero dicta molestiae architecto, facere harum pariatur dignissimos assumenda ipsam incidunt.</p>
+                        <p>Pozdravljeni! Sem Jure Pintar, 17 letni ustvarjalec unikatnih spletnih strani. Obiskujem srednjo tehnično šolo v Kranju, smer tehnik računalništva. Nad izdelavo spletnih strani sem se navdušil v 8 razredu, kot samouk sem se s pomočjo Youtuba in z ostalimi spletnimi orodji učil HTML, CSS in programski jezik JavaScript. Svoje znanje sem od takrat nenehno izpolnjeval, rezultat tega so tri pravljične spletne strani.</p>
                         <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
