--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="storitvevsebina">
                 <i class="fa-solid fa-code"></i>
                 <h2>Izdelava spletnih strani</h2>
-                <p>Izdelava spletnih strani vključuje tehnični proces, ki obsega programiranje, oblikovanje in postavitev vsebine za ustvarjanje funkcionalne in privlačne spletne strani. To vključuje uporabo programskih jezikov, kot so HTML, CSS in JavaScript.</p>
+                <p>Izdelava spletnih strani vključuje tehnični proces, ki obsega programiranje, oblikovanje in postavitev vsebine za ustvarjanje funkcionalne in privlačne spletne strani. To vključuje uporabo programskih jezikov, kot so HTML, CSS, JavaScript in Python.</p>
                 <a href="#">Več o tem</a>
 
             </div>
